Fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   --primary: oklch(0.6723 0.1606 244.9955);
   --primary-foreground: oklch(1.0000 0 0);
   /* --secondary: hsla(0, 4%, 15%, 0.432); */
-  --secondary: hsl(210 40% 96%);
+  --secondary: hsl(207, 11%, 68%);
   --secondary-foreground: hsl(222 47% 11%);
   --muted: oklch(0.9222 0.0013 286.3737);
   --muted-foreground: oklch(0.1884 0.0128 248.5103);
@@ -69,69 +69,71 @@
   --chart-3: hsl(30 80% 55%);
   --chart-4: hsl(280 65% 60%);
   --chart-5: hsl(340 75% 55%);
+  --checkbox: oklch(1.0000 0 0);
 }
 
 .dark {
-  --background: #121317;
-  --foreground: oklch(0.9328 0.0025 228.7857);
-  /* --card: oklch(0.2097 0.0080 274.5332); */
-  --card: oklch(28.924% 0.00565 271.227);
+  --background: oklch(13.441% 0.00002 271.152);
+  --foreground: oklch(0.9333 0.0011 197.1378);
+  --card: oklch(0.2132 0.0042 264.4789);
   --card-foreground: oklch(0.8853 0 0);
   --popover: oklch(0 0 0);
-  --popover-foreground: oklch(0.9328 0.0025 228.7857);
-  --primary: oklch(0.6692 0.1607 245.0110);
+  --popover-foreground: oklch(0.9333 0.0011 197.1378);
+  --primary: oklch(0.6365 0.1079 240.4494);
   --primary-foreground: oklch(1.0000 0 0);
-  --secondary: hsla(0, 3%, 47%, 0.432);
-  --secondary-foreground: hsl(222 47% 11%);
+  --secondary: oklch(55.637% 0.00368 198);
+  --secondary-foreground: oklch(0.2149 0.0085 240.3030);
   --muted: oklch(0.2090 0 0);
-  --muted-foreground: oklch(0.5637 0.0078 247.9662);
-  --accent: oklch(0.1928 0.0331 242.5459);
-  --accent-foreground: oklch(0.6692 0.1607 245.0110);
-  --destructive: oklch(0.6188 0.2376 25.7658);
+  --muted-foreground: oklch(70.148% 0.00379 248.36);
+  --accent: oklch(0.2154 0.0247 241.7117);
+  --accent-foreground: oklch(0.6365 0.1079 240.4494);
+  --destructive: oklch(0.5866 0.1614 19.9341);
   --destructive-foreground: oklch(1.0000 0 0);
-  --border: oklch(0.2674 0.0047 248.0045);
-  --input: oklch(0.3020 0.0288 244.8244);
-  --ring: oklch(0.6818 0.1584 243.3540);
-  --chart-1: oklch(0.6723 0.1606 244.9955);
-  --chart-2: oklch(0.6907 0.1554 160.3454);
-  --chart-3: oklch(0.8214 0.1600 82.5337);
-  --chart-4: oklch(0.7064 0.1822 151.7125);
-  --chart-5: oklch(0.5919 0.2186 10.5826);
-  --sidebar: hsl(0 0% 3.9%);
+  --border: oklch(0.2680 0.0024 247.9137);
+  --input: oklch(0.3036 0.0177 241.6043);
+  --ring: oklch(0.6470 0.1056 238.1248);
+  --chart-1: oklch(0.6401 0.1074 240.6746);
+  --chart-2: oklch(0.5933 0.1124 165.5162);
+  --chart-3: oklch(0.7488 0.1144 85.7336);
+  --chart-4: oklch(0.6233 0.1251 155.7075);
+  --chart-5: oklch(0.5667 0.1476 4.1754);
+  --sidebar: oklch(0.2132 0.0042 264.4789);
   --sidebar-foreground: oklch(0.8853 0 0);
-  --sidebar-primary: oklch(0.6818 0.1584 243.3540);
+  --sidebar-primary: oklch(0.6470 0.1056 238.1248);
   --sidebar-primary-foreground: oklch(1.0000 0 0);
-  --sidebar-accent: hsl(240 3.7% 15.9%);
-  --sidebar-accent-foreground: oklch(0.6692 0.1607 245.0110);
-  --sidebar-border: oklch(24.884% 0.0015 16.221);
-  --sidebar-ring: oklch(0.6818 0.1584 243.3540);
+  --sidebar-accent: oklch(30.757% 0.00338 229.298);
+  --sidebar-accent-foreground: oklch(0.6365 0.1079 240.4494);
+  --sidebar-border: oklch(0.3787 0.0138 243.9732);
+  --sidebar-ring: oklch(0.6470 0.1056 238.1248);
+
   /* --font-sans: Open Sans, sans-serif; */
   --font-sans: "Inter Variable", sans-serif;
   --font-serif: Georgia, serif;
   --font-mono: Menlo, monospace;
   --radius: 1.3rem;
-  --shadow-x: 0px;
-  --shadow-y: 2px;
-  --shadow-blur: 0px;
+  --shadow-x: 0;
+  --shadow-y: 1px;
+  --shadow-blur: 3px;
   --shadow-spread: 0px;
-  --shadow-opacity: 0;
-  --shadow-color: rgba(29,161,242,0.25);
-  --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373%);
-  --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373%);
-  --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.4);
-  --shadow: 0 1px 3px rgba(0, 0, 0, 0.45);
-  --shadow-md: 0 4px 12px rgba(0, 0, 0, 0.5);
-  --shadow-lg: 0 10px 25px rgba(0, 0, 0, 0.6);
-  --shadow-xl: 0 20px 40px rgba(0, 0, 0, 0.7);
-  --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373%);
+  --shadow-opacity: 0.1;
+  --shadow-color: oklch(0 0 0);
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
 
-   --profit: hsl(142 70% 50%);
+  --profit: hsl(142 70% 50%);
   --loss: hsl(0 70% 55%);
   --chart-1: hsl(222 84% 65%);
   --chart-2: hsl(160 60% 50%);
   --chart-3: hsl(30 80% 60%);
   --chart-4: hsl(280 65% 65%);
   --chart-5: hsl(340 75% 60%);
+  --checkbox: oklch(37.909% 0.00004 271.152);
 }
 
 @theme inline {
@@ -188,6 +190,7 @@
 
   --color-profit: var(--profit);
   --color-loss: var(--loss);
+  --color-checkbox: var(--checkbox);
 }
 
 @layer base {
